[gd_scene load_steps=11 format=3 uid="uid://o8et4lboneid"]

[ext_resource type="Script" uid="uid://b1vs1tr5h2ewh" path="res://Objects/Grinder/grinder.gd" id="1_npg6o"]

[sub_resource type="PrismMesh" id="PrismMesh_l4vr5"]
flip_faces = true
size = Vector3(2, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_l4vr5"]
size = Vector3(0.5, 0.5, 0.05)

[sub_resource type="Animation" id="Animation_l4vr5"]
resource_name = "Rotation"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrinderModel/Saw1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5707964, 0.43633232), Vector3(0, 1.5707964, 6.7195177)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GrinderModel/Saw2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5707964, 0), Vector3(0, 1.5707964, 6.2831855)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GrinderModel/Saw3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5707964, 2.7052603), Vector3(0, 1.5707964, 8.988445)]
}

[sub_resource type="Animation" id="Animation_npg6o"]
resource_name = "StartRotating"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrinderModel/Saw1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(0, 1.5707964, 0.43633232), Vector3(0, 1.5707964, 6.7195177)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GrinderModel/Saw2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(0, 1.5707964, 0), Vector3(0, 1.5707964, 6.2831855)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GrinderModel/Saw3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(0, 1.5707964, 2.7052603), Vector3(0, 1.5707964, 8.988445)]
}

[sub_resource type="Animation" id="Animation_nbfup"]
resource_name = "StopRotating"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrinderModel/Saw1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0, 1.5707964, 0.43633232), Vector3(0, 1.5707964, 6.7195177)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GrinderModel/Saw2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0, 1.5707964, 0), Vector3(0, 1.5707964, 6.2831855)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GrinderModel/Saw3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0, 1.5707964, 2.7052603), Vector3(0, 1.5707964, 8.988445)]
}

[sub_resource type="Animation" id="Animation_5idol"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrinderModel/Saw1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5707964, 0.43633232)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GrinderModel/Saw2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5707964, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GrinderModel/Saw3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5707964, 2.7052603)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s8q5x"]
_data = {
&"RESET": SubResource("Animation_5idol"),
&"Rotate": SubResource("Animation_l4vr5"),
&"StartRotating": SubResource("Animation_npg6o"),
&"StopRotating": SubResource("Animation_nbfup")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_npg6o"]
size = Vector3(1, 0.5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_nbfup"]
size = Vector3(1, 0.40222168, 1)

[node name="Grinder" type="Node3D"]
script = ExtResource("1_npg6o")

[node name="GrinderModel" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="GrinderModel"]
transform = Transform3D(-1, 8.742278e-08, 0, -8.742278e-08, -1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("PrismMesh_l4vr5")

[node name="Saw1" type="MeshInstance3D" parent="GrinderModel"]
transform = Transform3D(-3.961597e-08, 1.8473232e-08, 1, 0.42261827, 0.90630776, 0, -0.90630776, 0.42261827, -4.371139e-08, 0.2, -0.287, 0)
mesh = SubResource("BoxMesh_l4vr5")

[node name="Saw2" type="MeshInstance3D" parent="GrinderModel"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, -0.287, 0)
mesh = SubResource("BoxMesh_l4vr5")

[node name="Saw3" type="MeshInstance3D" parent="GrinderModel"]
transform = Transform3D(3.961597e-08, 1.8473234e-08, 1, 0.42261833, -0.90630776, 0, 0.90630776, 0.42261833, -4.371139e-08, -0.2, -0.287, 0)
mesh = SubResource("BoxMesh_l4vr5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s8q5x")
}

[node name="GrindZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="GrindZone"]
shape = SubResource("BoxShape3D_npg6o")

[node name="DestroyZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.85, 0)
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="DestroyZone"]
shape = SubResource("BoxShape3D_nbfup")

[connection signal="body_entered" from="GrindZone" to="." method="_on_grind_zone_body_entered"]
[connection signal="body_entered" from="DestroyZone" to="." method="_on_destroy_zone_body_entered"]
